--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
          </div>
          <div class="right-col">
              <p>Click here to listen</p>
-             <img src="media/play.png" id="icon">
+             <img src="Media/play.png" id="icon">
          </div>
      </div>  
    </div> 
 
    <audio id="mysong">
-       <source src="media/Kendrick-Lamar-Alright-via-Naijafinix.com_.mp3" type="audio/mp3">
+       <source src="Media/Kendrick-Lamar-Alright-via-Naijafinix.com_.mp3" type="audio/mp3">
    </audio>
    <script>
        var mysong=document.getElementById("mysong");
@@ -41,10 +41,10 @@ var icon=document.getElementById("icon");
 icon.onclick=function(){
   if(mysong.paused){
       mysong.play();
-      icon.src= "media/pause.png";
+      icon.src= "Media/pause.png";
   }else{
       mysong.pause();
-      icon.src="media/play.png";
+      icon.src="Media/play.png";
   }
 }
    </script>
